Prevent edit footer from covering form

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -10,12 +10,11 @@
 }
 
 .footer-wrapper {
-  z-index: 999;
+  z-index: 20;
   height: 48px;
   padding: 10px;
   width: 100%;
-  position: fixed;
-  left: 0;
+  position: sticky;
   bottom: 0;
   background: #fff;
   box-sizing: border-box;
